--- a/website/styles.css
+++ b/website/styles.css
@@ -19,7 +19,7 @@ p {
 }
 
 .container {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     margin: auto;
     padding-top: 4%;
@@ -62,7 +62,7 @@ p {
         /*********Nav Bar *******/
 
 nav {
-    width: 100%;
+    max-width: 100%;
     margin: 0;
 }
 
@@ -85,7 +85,6 @@ ul.topnav li.topnav-right {
 ul.topnav li a {
     text-decoration: none;
     min-height: 16px;
-    font-size: 14px;
     display: block;
     padding: 14px;
     text-transform: uppercase;
