--- a/Pricing Page/styles.css
+++ b/Pricing Page/styles.css
@@ -154,7 +154,7 @@ body {
   }
 
   /* Hint: What can you do with a media query and flexbox? */
-  @media (max-width: 1000px) {
+  /* @media (max-width: 1000px) {
     .pricing-container {
       flex-direction: column;
       height: initial;
@@ -164,4 +164,4 @@ body {
       margin: 20px;
     }
     
-  }
+  } */
