--- a/Pricing Page/styles.css
+++ b/Pricing Page/styles.css
@@ -159,7 +159,7 @@ body {
     .pricing-container {
       /* flex-direction: column; */
       
-      height: 100%;
+      height: inherit;
     }
 
     .pricing-plan {
