--- a/AboutMe Page/styles.css
+++ b/AboutMe Page/styles.css
@@ -85,7 +85,7 @@ h2 {
 }
 
 .contact-message {
-    width: 40%;
+    width: 70%;
     margin: 40px auto 60px;
 }
 
@@ -124,9 +124,9 @@ h2 {
       font-size: 1.5rem;
     }
 
-    .contact-message {
+    /* .contact-message {
         width: 40%;
-    }
+    } */
 
     .sub-text {
         margin: auto;
