--- a/AboutMe Page/styles.css
+++ b/AboutMe Page/styles.css
@@ -18,7 +18,8 @@ a {
 
 body {
     text-align: center;
-    color: pink;
+    color: black;
+    background-color: rgb(252, 236, 239);
 }
 
 p {
@@ -40,17 +41,18 @@ p {
 
 .profile-picture {
     border-radius: 50%;
+    border: 1px pink solid;
 }
 
 .profile-pictureText {
-    color: black;
+    color: #40514e;
     margin: auto;
     width: 70%;
 }
 
 .dotted-line {
     width: 4%;
-    border: 6px dotted pink;
+    border: 6px dotted #0d6efd;
     margin: 100px auto;
     border-bottom: none;
 }
@@ -64,7 +66,7 @@ p {
 }
 
 .to-resume {
-    background: linear-gradient(315deg,  pink 20%, rgb(36, 89, 189) 120%);
+    /* background: linear-gradient(315deg,  pink 20%, rgb(36, 89, 189) 120%); */
     border: none;
 }
 
@@ -87,10 +89,12 @@ h2 {
 .contact-message {
     width: 70%;
     margin: 40px auto 60px;
+    color: #40514e;
 }
 
 .btn {
-    background: linear-gradient(315deg,  rgb(196, 140, 149) 20%, rgb(36, 89, 189) 120%);;
+    /* background: linear-gradient(315deg,  rgb(196, 140, 149) 20%, rgb(36, 89, 189) 120%); */
+    background-color: #0d6efd;
     border-radius: 8px;
     font-family: "Montserrat", sans-serif;
     color: #ffffff;
