--- a/website/styles.css
+++ b/website/styles.css
@@ -18,7 +18,7 @@ p {
     line-height: 1.2 ;
 }
 
-.container {
+.containers {
     max-width: 100%;
     height: 100%;
     margin: auto;
@@ -28,7 +28,7 @@ p {
     overflow: hidden;
 }
 
-.row {
+.rows {
     max-width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -37,24 +37,24 @@ p {
     
 }
 
-.row:after {
+.rows:after {
     display: table;
     clear: both;
     content: "";
 }
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
+.cols-1 {width: 8.33%;}
+.cols-2 {width: 16.66%;}
+.cols-3 {width: 25%;}
+.cols-4 {width: 33.33%;}
+.cols-5 {width: 41.66%;}
+.cols-6 {width: 50%;}
+.cols-7 {width: 58.33%;}
+.cols-8 {width: 66.66%;}
+.cols-9 {width: 75%;}
+.cols-10 {width: 83.33%;}
+.cols-11 {width: 91.66%;}
+.cols-12 {width: 100%;}
 
 * {
     box-sizing: border-box;
@@ -110,16 +110,22 @@ ul.topnav li.dropdownicon {
 #sec-1-grad {
     /* background-color: #4a55f7; */
     /* background-color: #000CAE; */
-    background-image: url(image/love-coffee.jpg);
+    /* background-image: url(image/love-coffee.jpg); */
+    background-image: url(image/dark-withCircles.jpg);
+    /* opacity: 0.5; */
     background-repeat: no-repeat;
-    /* background-size: 100% 100%; */
     box-sizing: border-box;
     background-size: cover;
     height: auto;
     min-height: 600px;
     background-position: center;
+    position: relative;
     display: flex;
     justify-content: center;
+
+}
+
+.logo {
 
 }
 
@@ -139,7 +145,7 @@ div.icon {
 }
 
 
-.leftSide-col h1.large {
+/* .leftSide-col h1.large {
     color: rgb(240, 235, 235);
     font-size: 80px;
     font-family: Pacifico, serif;
@@ -149,10 +155,10 @@ div.icon {
     letter-spacing: 10px;
     /* color: rgb(235, 235, 78); */
     /* color: #ffbb2a; */
-    /* color: #ffc13d; */
-}
+    /* color: #ffc13d; 
+} */
 
-h2.large {
+/* h2.large {
     font-family: cursive, serif;
     font-size: 20px;
     color: rgb(230, 230, 16);
@@ -161,12 +167,12 @@ h2.large {
     margin-right: 40px;
     /* color: #0b9ca7; */
     /* color: #b67a0a; */
-    /* color: #0a838b; */
-}
+    /* color: #0a838b; 
+} */
 
-.large {
+/* .large {
     margin: 0;
-}
+} */
 
 h1.sec-2-header {
     font-size: 45px;
